Fix Bored API CORS issue in production
- Add Vercel rewrite rule to proxy API requests
- Update Bored component to use proxy in both dev and production
- Fixes blank page issue on production deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
   "rewrites": [
     {
+      "source": "/api/bored/:path*",
+      "destination": "https://bored-api.appbrewery.com/:path*"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
