Add Jokes page with easter egg access from Bored page
- Created Jokes page component with JokeAPI integration
- Added category, type, and blacklist flag filters
- Implemented easter egg: click 'Bored?' title 4 times to access Jokes page
- Added API proxy configuration for both dev and production
- Styled Jokes page to match Bored page design

--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,10 @@
       "destination": "https://bored-api.appbrewery.com/:path*"
     },
     {
+      "source": "/api/jokeapi/:path*",
+      "destination": "https://v2.jokeapi.dev/:path*"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
