Add /go route proxy and fix animation issues
- Add vercel.json rewrite rule for /go route to proxy to GO app
- Fix Home page animations to continue while holding down (check mouse buttons state)
- Add growing text easter egg to Contact page that fills screen on hold
- Improve touch and mouse event handling for better animation continuity

--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,10 @@
       "destination": "https://v2.jokeapi.dev/:path*"
     },
     {
+      "source": "/go/:path*",
+      "destination": "https://thego-navy.vercel.app/:path*"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
