--- a/vercel.json
+++ b/vercel.json
@@ -43,7 +43,7 @@
         },
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://api.bigdatacloud.net https://api.open-meteo.com https://bored-api.appbrewery.com https://v2.jokeapi.dev; media-src 'self'; frame-ancestors 'none';"
+          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://api.bigdatacloud.net https://api.open-meteo.com https://api.weather.gov https://bored-api.appbrewery.com https://v2.jokeapi.dev; media-src 'self'; frame-ancestors 'none';"
         }
       ]
     }
