--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,14 @@
       "destination": "https://thego-navy.vercel.app/:path*"
     },
     {
+      "source": "/privacy-policy.html",
+      "destination": "https://thego-navy.vercel.app/privacy-policy.html"
+    },
+    {
+      "source": "/terms-of-service.html",
+      "destination": "https://thego-navy.vercel.app/terms-of-service.html"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
