Improve weather geocoding, tide calculation, and add API cost tracking
- Fix location name not showing on mobile with non-blocking geocoding
- Add Nominatim fallback API for better geocoding reliability
- Improve tide calculation using actual water level data from Open-Meteo
- Add budget alert system with 50%, 75%, and 90% thresholds
- Reduce Google Places API calls from 2 to 1 per search (50% cost reduction)
- Add API usage tracking and cost estimation system
- Add floating close button for mobile modal (always accessible)
- Improve coffee search with dual keyword queries and better filtering
- Update CSP to allow Nominatim geocoding API
- Add comprehensive API cost tracking documentation

--- a/vercel.json
+++ b/vercel.json
@@ -43,7 +43,7 @@
         },
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://js.stripe.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://api.bigdatacloud.net https://api.open-meteo.com https://marine-api.open-meteo.com https://api.weather.gov https://wttr.in https://bored-api.appbrewery.com https://v2.jokeapi.dev https://api.stripe.com https://checkout.stripe.com https://overpass-api.de https://maps.googleapis.com; frame-src https://checkout.stripe.com; media-src 'self'; frame-ancestors 'none';"
+          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://js.stripe.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://api.bigdatacloud.net https://api.open-meteo.com https://marine-api.open-meteo.com https://api.weather.gov https://wttr.in https://bored-api.appbrewery.com https://v2.jokeapi.dev https://api.stripe.com https://checkout.stripe.com https://overpass-api.de https://maps.googleapis.com https://nominatim.openstreetmap.org; frame-src https://checkout.stripe.com; media-src 'self'; frame-ancestors 'none';"
         }
       ]
     }
