--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "theingredients",
   "private": true,
-  "version": "1.3.3",
+  "version": "1.3.4",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
+    "redis": "^5.9.0",
     "stripe": "^19.3.1"
   },
   "devDependencies": {
