--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,10 @@
       "destination": "https://thego-navy.vercel.app/:path*"
     },
     {
+      "source": "/or/:path*",
+      "destination": "https://or-six.vercel.app/or/:path*"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
