--- a/vercel.json
+++ b/vercel.json
@@ -13,8 +13,16 @@
       "destination": "https://thego-navy.vercel.app/:path*"
     },
     {
+      "source": "/or",
+      "destination": "https://or-six.vercel.app/"
+    },
+    {
+      "source": "/or/",
+      "destination": "https://or-six.vercel.app/"
+    },
+    {
       "source": "/or/:path*",
-      "destination": "https://or-six.vercel.app/or/:path*"
+      "destination": "https://or-six.vercel.app/:path*"
     },
     {
       "source": "/(.*)",
